.. _changelog:

================
 Change history
================

This document contains change notes for bugfix releases in
the 4.1.x series (latentcall), please see :ref:`whatsnew-4.1` for
an overview of what's new in Celery 4.1.

.. _version-4.1.0:

4.1.0
=====
:release-date: 2017-07-25 00:00 PM PST
:release-by: Omer Katz


- **Configuration**: CELERY_SEND_EVENTS instead of CELERYD_SEND_EVENTS for 3.1.x compatibility (#3997)

 Contributed by **abhinav nilaratna**.

- **App**: Restore behavior so Broadcast queues work. (#3934)

 Contributed by **Patrick Cloke**.

- **Sphinx**: Make appstr use standard format (#4134) (#4139)

 Contributed by **Preston Moore**.

- **App**: Make id, name always accessible from logging.Formatter via extra (#3994)

 Contributed by **Yoichi NAKAYAMA**.

- **Worker**: Add worker_shutting_down signal (#3998)

 Contributed by **Daniel Huang**.

- **PyPy**: Support PyPy version 5.8.0 (#4128)

 Contributed by **Omer Katz**.

- **Results**: Elasticsearch: Fix serializing keys (#3924)

 Contributed by :github_user:`staticfox`.

- **Canvas**: Deserialize all tasks in a chain (#4015)

 Contributed by :github_user:`fcoelho`.

- **Systemd**: Recover loglevel for ExecStart in systemd config (#4023)

 Contributed by **Yoichi NAKAYAMA**.

- **Sphinx**: Use the Sphinx add_directive_to_domain API. (#4037)

 Contributed by **Patrick Cloke**.

- **App**: Pass properties to before_task_publish signal (#4035)

 Contributed by **Javier Domingo Cansino**.

- **Results**: Add SSL option for Redis backends (#3831)

 Contributed by **Chris Kuehl**.

- **Beat**: celery.schedule.crontab: fix reduce (#3826) (#3827)

 Contributed by **Taylor C. Richberger**.

- **State**: Fix celery issues when using flower REST API

 Contributed by **Thierry RAMORASOAVINA**.

- **Results**: Elasticsearch: Fix serializing document id.

 Contributed by **Acey9**.

- **Beat**: Make shallow copy of schedules dictionary

 Contributed by **Brian May**.
